# task02--zoo-odelya1999

./: README.md
tasks_week3_odelya_yaakowich/: CMakeLists.txt
tasks_week3_odelya_yaakowich/include/: Animal.h  CMakeLists.txt  Dog.h  Lion.h  Location.h  Monkey.h  Zoo.h
tasks_week3_odelya_yaakowich/src/: CMakeLists.txt  Dog.cpp  Lion.cpp  Monkey.cpp  Zoo.cpp  tasks_week3_odelya_yaakowich.cpp
